// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/cardDetailContents should match snapshot 1`] = `
<div>
  <div
    class="octo-content CardDetailContents"
  >
    <div
      class="octo-block"
    >
      <div
        class="octo-block-margin"
      />
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview octo-placeholder"
          data-testid="preview-element"
        >
          <p>
            Add a description...
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/cardDetailContents should match snapshot after drag and drop event 1`] = `
<div>
  <div
    class="octo-content"
  >
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
    </div>
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        style="display: flex;"
      >
        <div
          class="rowContents"
          style="width: 50%;"
        >
          <div
            class="ContentBlock octo-block"
          >
            <div
              class="octo-block-margin"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
              <div
                class="dnd-handle"
                draggable="true"
              >
                <svg
                  class="GripIcon Icon"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="addToRow "
              style="flex: 0 0 auto; height: 100%;"
            />
            <div
              class="DividerElement"
            />
          </div>
          <div
            class="addToRow "
          />
        </div>
        <div
          class="rowContents"
          style="width: 50%;"
        >
          <div
            class="ContentBlock octo-block"
          >
            <div
              class="octo-block-margin"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
              <div
                class="dnd-handle"
                draggable="true"
              >
                <svg
                  class="GripIcon Icon"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="DividerElement"
            />
          </div>
          <div
            class="addToRow "
          />
        </div>
      </div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/cardDetailContents should match snapshot after drag and drop event 2 1`] = `
<div>
  <div
    class="octo-content"
  >
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
    </div>
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/cardDetailContents should match snapshot after drag and drop event 3 1`] = `
<div>
  <div
    class="octo-content"
  >
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
    </div>
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/cardDetailContents should match snapshot with contents array 1`] = `
<div>
  <div
    class="octo-content"
  >
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/cardDetailContents should match snapshot with contents array that has array inside it 1`] = `
<div>
  <div
    class="octo-content"
  >
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        class="rowContents"
      >
        <div
          class="ContentBlock octo-block"
        >
          <div
            class="octo-block-margin"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <div
              class="dnd-handle"
              draggable="true"
            >
              <svg
                class="GripIcon Icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <div
            class="addToRow "
            style="flex: 0 0 auto; height: 100%;"
          />
          <div
            class="DividerElement"
          />
        </div>
        <div
          class="addToRow "
        />
      </div>
    </div>
    <div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
      <div
        style="display: flex;"
      >
        <div
          class="rowContents"
          style="width: 50%;"
        >
          <div
            class="ContentBlock octo-block"
          >
            <div
              class="octo-block-margin"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
              <div
                class="dnd-handle"
                draggable="true"
              >
                <svg
                  class="GripIcon Icon"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="addToRow "
              style="flex: 0 0 auto; height: 100%;"
            />
            <div
              class="DividerElement"
            />
          </div>
          <div
            class="addToRow "
          />
        </div>
        <div
          class="rowContents"
          style="width: 50%;"
        >
          <div
            class="ContentBlock octo-block"
          >
            <div
              class="octo-block-margin"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
              <div
                class="dnd-handle"
                draggable="true"
              >
                <svg
                  class="GripIcon Icon"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="DividerElement"
            />
          </div>
          <div
            class="addToRow "
          />
        </div>
      </div>
      <div
        class="addToRow "
        style="width: 94%; height: 10px; margin-left: 48px;"
      />
    </div>
  </div>
</div>
`;
